--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -17,3 +17,12 @@
     margin-top: 10px;
     margin-left: 30px;
 }
+
+.progress-numbers {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 5px; /* Adjust padding as needed */
+    font-size: 14px; /* Adjust font size as needed */
+    margin-top: 10px; /* Adjust the margin to position below the progress bar */
+}
