--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,9 @@ body {
 
 /* Basic styling for header and footer */
 header, footer {
-    background-color: #899878;
+    /* background-color: #899878; */
+    background-color: #81b29a;
+    /* background-color: #17c3b2; */
     color: E4E6C3;
     text-align: center;
     padding: 1rem;
@@ -29,10 +31,10 @@ header, footer {
 /* Apply styles to the text inside the boxes */
 .box {
     font-size: 24px; /* Adjust the font size as needed */
-    background-color: #E4E6C3; /* Text color */
+    background-color: #E4E6C3; 
+    /* background-color: #fce7c5; */
     text-align: center; /* Text alignment */
     padding: 10px; /* Add padding for better visual appearance */
-    /* You can add more styles as needed */
     margin: 10px;
 }
 
@@ -63,7 +65,9 @@ header, footer {
 }
 
 .button {
-    background-color: #899878;
+    /* background-color: #899878; */
+    background-color: #81b29a;
+
     color: #F7F7F2;
     border: none;
     border-radius: 5px;
@@ -77,7 +81,7 @@ header, footer {
 }
 
 .button:hover {
-    background-color: #e74c3c;
+    background-color: #e4c1f9;
     color: #ffffff;
   }
 
@@ -91,7 +95,9 @@ header, footer {
 
 .progress {
     height: 100%;
-    background-color: #b88c9e; 
+    /* background-color: #b88c9e;  */
+    background-color: #e4c1f9; 
+
     border-radius: 10px;
 }
 
