--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,7 +6,7 @@
     text-align: left;
 }
 
-#remove-book-dropdown {
+#remove-book-dropdown, #remove-tbr-dropdown {
     width: 70px;
     margin-left: 30px;
     margin-top: 10px;
@@ -40,7 +40,7 @@
 
 
 
-#done-remove {
+#done-remove, #tbr-done-remove {
     width: 100px;
     margin-top: 10px;
     margin-left: 30px;
@@ -79,8 +79,15 @@
 
 #remove-tbr-button {
     width: 150px;
-
-
+    margin-top: 10px;
 }
+
+.tbr-container {
+    text-align: left;
+}
+
+
+
+
 
 
