--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -86,8 +86,15 @@
     text-align: left;
 }
 
+.books-read-box {
+    max-height: 600px; /* Adjust the height as needed */
+    overflow-y: auto; /* Add a vertical scrollbar when content overflows */
+ }
 
-
+.tbr-list-box {
+    max-height: 250px;
+    overflow-y: auto;
+}
 
 
 
