--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -87,8 +87,8 @@
 }
 
 .books-read-box {
-    max-height: 600px; /* Adjust the height as needed */
-    overflow-y: auto; /* Add a vertical scrollbar when content overflows */
+    max-height: 600px; 
+    overflow-y: auto; 
  }
 
 .tbr-list-box {
@@ -97,4 +97,8 @@
 }
 
 
-
+.remove-tbr-container {
+    display: grid;
+    grid-template-columns: auto 1fr; /* Adjust the column widths as needed */
+    align-items: center; /* Vertically align items in the container */
+}
