--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,3 @@
-/* Reset some default styles for consistency */
 body, h1, h2, p {
     font-family: 'Times New Roman', Times, serif;
     color: #553D25;
@@ -11,11 +10,8 @@ div {
     border-radius: 20px;
 }
 
-/* Basic styling for header and footer */
 header, footer {
-    /* background-color: #899878; */
     background-color: #81b29a;
-    /* background-color: #17c3b2; */
     color: E4E6C3;
     text-align: center;
     padding: 1rem;
@@ -32,13 +28,11 @@ header, footer {
     min-height: 100%;
 }
 
-/* Apply styles to the text inside the boxes */
 .box {
     font-size: 24px; 
     background-color: #E4E6C3; 
-    /* background-color: #fce7c5; */
-    text-align: center; /* Text alignment */
-    padding: 10px; /* Add padding for better visual appearance */
+    text-align: center; 
+    padding: 10px; 
     margin: 10px;
     transition: background-color 0.3s ease, color 0.3s ease;
 
@@ -76,7 +70,6 @@ header, footer {
 }
 
 .button {
-    /* background-color: #899878; */
     background-color: #81b29a;
 
     color: #F7F7F2;
@@ -88,7 +81,6 @@ header, footer {
     font-family:'Times New Roman', Times, serif;
 
     transition: background-color 0.3s ease, color 0.3s ease;
-
 }
 
 .button:hover {
@@ -106,9 +98,7 @@ header, footer {
 
 .progress {
     height: 100%;
-    /* background-color: #b88c9e;  */
     background-color: #e4c1f9; 
-
     border-radius: 10px;
 }
 
@@ -123,9 +113,7 @@ header, footer {
     margin-left: 2px;
     margin-right: 2px;
     margin-bottom: 30px;
-    
     border: 2px solid #553D25;
-    
 }
 
 
